--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./asset/lib/css/layui.css" />
-    <link rel="stylesheet" href="./asset/lib/layui.all.js" />
     <title>首页</title>
   </head>
-  <body>
-  </body>
+  <body></body>
 </html>
