--- a/login.html
+++ b/login.html
@@ -5,10 +5,48 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./asset/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="./asset/css/login.css" />
     <title>登录</title>
   </head>
   <body>
     <!-- 登录功能 -->
+    <!-- logo模块 -->
+    <div class="header layui-container">
+      <img src="./asset/images/logo.png" alt="" />
+    </div>
+    <!-- 登录表单布局 -->
+    <div class="login-box">
+      <div class="login-title"></div>
+      <!-- 表单结构 -->
+      <form action="" class="layui-form">
+        <!-- 账号 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-username"></i>
+          <input
+            type="text"
+            name="title"
+            required
+            lay-verify="required"
+            placeholder="请输入用户名"
+            autocomplete="off"
+            class="layui-input"
+          />
+        </div>
+        <!-- 密码 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-password"></i>
+          <input type="text" name="title" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input" />
+        </div>
+        <!-- 提交 -->
+        <div class="layui-form-item">
+          <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit lay-filter="formDemo">登录</button>
+        </div>
+        <!-- 去注册 -->
+        <div class="layui-form-item right-link">
+          <a href="javascriipt:;">去注册账号</a>
+        </div>
+      </form>
+    </div>
     <script src="./asset/lib/layui/layui.all.js"></script>
   </body>
 </html>
