--- a/login.html
+++ b/login.html
@@ -17,8 +17,8 @@
     <!-- 登录表单布局 -->
     <div class="login-box">
       <div class="login-title"></div>
-      <!-- 表单结构 -->
-      <form action="" class="layui-form" id="login">
+      <!-- 表单结构 登录-->
+      <form action="" class="layui-form login-form" id="login">
         <!-- 账号 -->
         <div class="layui-form-item">
           <i class="layui-icon layui-icon-username"></i>
@@ -26,7 +26,7 @@
             type="text"
             name="username"
             required
-            lay-verify="uname"
+            lay-verify="required|uname"
             placeholder="请输入用户名"
             autocomplete="off"
             class="layui-input"
@@ -39,7 +39,7 @@
             type="password"
             name="password"
             required
-            lay-verify="pwd"
+            lay-verify="required|pwd"
             placeholder="请输入密码"
             autocomplete="off"
             class="layui-input"
@@ -52,6 +52,48 @@
         <!-- 去注册 -->
         <div class="layui-form-item right-link">
           <a href="javascriipt:;">去注册账号</a>
+        </div>
+      </form>
+      <!-- 表单结构 注册 -->
+      <form action="" class="layui-form reg-form" id="login">
+        <!-- 账号 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-username"></i>
+          <input
+            type="text"
+            name="username"
+            required
+            lay-verify="required|uname"
+            placeholder="请输入用户名"
+            autocomplete="off"
+            class="layui-input"
+          />
+        </div>
+        <!-- 密码 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-password"></i>
+          <input
+            type="password"
+            name="password"
+            required
+            lay-verify="required|pwd"
+            placeholder="请输入密码"
+            autocomplete="off"
+            class="layui-input"
+          />
+        </div>
+        <!-- 确认密码 -->
+        <div class="layui-form-item">
+          <i class="layui-icon layui-icon-password"></i>
+          <input type="password" required lay-verify="required|pwd" placeholder="请确认密码" autocomplete="off" class="layui-input" />
+        </div>
+        <!-- 提交 -->
+        <div class="layui-form-item">
+          <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit lay-filter="formDemo">注册</button>
+        </div>
+        <!-- 去登陆 -->
+        <div class="layui-form-item right-link">
+          <a href="javascriipt:;">去登陆</a>
         </div>
       </form>
     </div>
