--- a/login.html
+++ b/login.html
@@ -85,7 +85,14 @@
         <!-- 确认密码 -->
         <div class="layui-form-item">
           <i class="layui-icon layui-icon-password"></i>
-          <input type="password" required lay-verify="required|pwd" placeholder="请确认密码" autocomplete="off" class="layui-input" />
+          <input
+            type="password"
+            required
+            lay-verify="required|pwd|samePwd"
+            placeholder="请确认密码"
+            autocomplete="off"
+            class="layui-input"
+          />
         </div>
         <!-- 提交 -->
         <div class="layui-form-item">
