切换登录和注册表单

--- a/login.html
+++ b/login.html
@@ -50,7 +50,7 @@
           <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit lay-filter="formDemo">登录</button>
         </div>
         <!-- 去注册 -->
-        <div class="layui-form-item right-link">
+        <div class="layui-form-item login-link">
           <a href="javascriipt:;">去注册账号</a>
         </div>
       </form>
@@ -99,7 +99,7 @@
           <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit lay-filter="formDemo">注册</button>
         </div>
         <!-- 去登陆 -->
-        <div class="layui-form-item right-link">
+        <div class="layui-form-item reg-link">
           <a href="javascriipt:;">去登陆</a>
         </div>
       </form>
