注册和登录事件功能完成

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     <div class="login-box">
       <div class="login-title"></div>
       <!-- 表单结构 登录-->
-      <form action="" class="layui-form login-form" id="login">
+      <form action="" class="layui-form login-form" id="login-form">
         <!-- 账号 -->
         <div class="layui-form-item">
           <i class="layui-icon layui-icon-username"></i>
@@ -50,12 +50,12 @@
           <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit lay-filter="formDemo">登录</button>
         </div>
         <!-- 去注册 -->
-        <div class="layui-form-item login-link">
+        <div class="layui-form-item reg-link">
           <a href="javascriipt:;">去注册账号</a>
         </div>
       </form>
       <!-- 表单结构 注册 -->
-      <form action="" class="layui-form reg-form" id="login">
+      <form action="" class="layui-form reg-form" id="reg-form">
         <!-- 账号 -->
         <div class="layui-form-item">
           <i class="layui-icon layui-icon-username"></i>
@@ -99,7 +99,7 @@
           <button class="layui-btn layui-btn-fluid layui-btn-normal" lay-submit lay-filter="formDemo">注册</button>
         </div>
         <!-- 去登陆 -->
-        <div class="layui-form-item reg-link">
+        <div class="layui-form-item login-link">
           <a href="javascriipt:;">去登陆</a>
         </div>
       </form>
