设置通用请求地址

--- a/login.html
+++ b/login.html
@@ -105,6 +105,7 @@
       </form>
     </div>
     <script src="./asset/lib/jquery.js"></script>
+    <script src="./asset/js/common.js"></script>
     <script src="./asset/lib/layui/layui.all.js"></script>
     <script src="./asset/js/login.js"></script>
   </body>
