主页布局左侧菜单优化

--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
           <input
             type="text"
             name="username"
-            required
+            requireds
             lay-verify="required|uname"
             placeholder="请输入用户名"
             autocomplete="off"
