--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="zh-CN">
+<html>
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,user-scalable=no" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="./asset/lib/css/layui.css" />
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+    <title>layout 后台大布局 - Layui</title>
+    <link rel="stylesheet" href="./asset/lib/layui/css/layui.css" />
     <script>
       //判断用户是否已经登录
       var token = sessionStorage.getItem('mytoken');
@@ -13,7 +13,68 @@
         location.href = './login.html';
       }
     </script>
-    <title>首页</title>
   </head>
-  <body></body>
+  <body class="layui-layout-body">
+    <div class="layui-layout layui-layout-admin">
+      <!-- 顶部导航 -->
+      <div class="layui-header">
+        <div class="layui-logo">
+          <img src="./asset/images//logo.png" alt="" />
+        </div>
+        <ul class="layui-nav layui-layout-right">
+          <li class="layui-nav-item">
+            <a href="javascript:;">
+              <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
+              黑马
+            </a>
+            <dl class="layui-nav-child">
+              <dd><a href="">基本资料</a></dd>
+              <dd><a href="">更换头像</a></dd>
+              <dd><a href="">重置密码</a></dd>
+            </dl>
+          </li>
+          <li class="layui-nav-item"><a href="">退了</a></li>
+        </ul>
+      </div>
+
+      <div class="layui-side layui-bg-black">
+        <div class="layui-side-scroll">
+          <!-- 左侧菜单 -->
+          <ul class="layui-nav layui-nav-tree" lay-shrink='all' lay-filter="test">
+            <li class="layui-nav-item layui-this"><a href="">首页</a></li>
+            <li class="layui-nav-item layui-nav-itemed">
+              <a class="" href="javascript:;">文章管理</a>
+              <dl class="layui-nav-child">
+                <dd><a href="javascript:;">文章类别</a></dd>
+                <dd><a href="javascript:;">文章列表</a></dd>
+                <dd><a href="javascript:;">发表文章</a></dd>
+              </dl>
+            </li>
+            <li class="layui-nav-item">
+              <a href="javascript:;">个人中心</a>
+              <dl class="layui-nav-child">
+                <dd><a href="javascript:;">基本资料</a></dd>
+                <dd><a href="javascript:;">更换头像</a></dd>
+                <dd><a href="javascript:;">修改密码</a></dd>
+              </dl>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <!-- 右侧 -->
+      <div class="layui-body">
+        <!-- 内容主体区域 -->
+        <div style="padding: 15px;">内容主体区域</div>
+      </div>
+      <!-- 底部 -->
+      <div class="layui-footer">
+        <!-- 底部固定区域 -->
+        © layui.com - 底部固定区域
+      </div>
+    </div>
+    <script src="./asset/lib/jquery.js"></script>
+    <script src="./asset/js/common.js"></script>
+    <script src="./asset/lib/layui/layui.all.js"></script>
+    <script src="./asset/js/index.js"></script>
+  </body>
 </html>
