定制用户头像

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         <ul class="layui-nav layui-layout-right">
           <li class="layui-nav-item">
             <a href="javascript:;">
+              <!-- <div class='avatar'></div> -->
               <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
               黑马
             </a>
@@ -47,6 +48,11 @@
 
       <div class="layui-side layui-bg-black">
         <div class="layui-side-scroll">
+          <a href="javascript:;" class="welcome">
+            <!-- <div class='avatar'></div> -->
+            <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
+            <span>欢迎xxx</span>
+          </a>
           <!-- 左侧菜单 -->
           <ul class="layui-nav layui-nav-tree" lay-shrink="all" lay-filter="test">
             <li class="layui-nav-item layui-this">
