--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <ul class="layui-nav layui-layout-right">
           <li class="layui-nav-item">
             <a href="javascript:;">
-              <!-- <div class='avatar'></div> -->
+              <!-- <div class='avatar'>U</div> -->
               <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
               黑马
             </a>
@@ -49,7 +49,7 @@
       <div class="layui-side layui-bg-black">
         <div class="layui-side-scroll">
           <a href="javascript:;" class="welcome">
-            <!-- <div class='avatar'></div> -->
+            <!-- <div class='avatar'>U</div> -->
             <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
             <span>欢迎xxx</span>
           </a>
@@ -119,12 +119,12 @@
       <!-- 右侧 -->
       <div class="layui-body">
         <!-- 内容主体区域 -->
-        <div style="padding: 15px;">内容主体区域</div>
+        <iframe src="./home/dashboard.html"></iframe>
       </div>
       <!-- 底部 -->
       <div class="layui-footer">
         <!-- 底部固定区域 -->
-        © layui.com - 底部固定区域
+        © knabujianwojpg.com - 大事件的底部
       </div>
     </div>
     <script src="./asset/lib/jquery.js"></script>
