获取并展示用户信息

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         </div>
         <ul class="layui-nav layui-layout-right">
           <li class="layui-nav-item">
-            <a href="javascript:;">
+            <a href="javascript:;" class="nav-user">
               <!-- <div class='avatar'>U</div> -->
-              <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
-              黑马
+              <!-- <img src="http://t.cn/RCzsdCq" class="layui-nav-img" /> -->
+              <span>黑马</span>
             </a>
             <dl class="layui-nav-child">
               <dd><a href="">基本资料</a></dd>
@@ -50,7 +50,7 @@
         <div class="layui-side-scroll">
           <a href="javascript:;" class="welcome">
             <!-- <div class='avatar'>U</div> -->
-            <img src="http://t.cn/RCzsdCq" class="layui-nav-img" />
+            <!-- <img src="http://t.cn/RCzsdCq" class="layui-nav-img" /> -->
             <span>欢迎xxx</span>
           </a>
           <!-- 左侧菜单 -->
