完善用户信息展示

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="javascript:;" class="nav-user">
               <!-- <div class='avatar'>U</div> -->
               <!-- <img src="http://t.cn/RCzsdCq" class="layui-nav-img" /> -->
-              <span>黑马</span>
+              <span class="userName">黑马</span>
             </a>
             <dl class="layui-nav-child">
               <dd><a href="">基本资料</a></dd>
@@ -51,7 +51,7 @@
           <a href="javascript:;" class="welcome">
             <!-- <div class='avatar'>U</div> -->
             <!-- <img src="http://t.cn/RCzsdCq" class="layui-nav-img" /> -->
-            <span>欢迎xxx</span>
+            <span class="userName">欢迎xxx</span>
           </a>
           <!-- 左侧菜单 -->
           <ul class="layui-nav layui-nav-tree" lay-shrink="all" lay-filter="test">
