实现退出功能

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </dl>
           </li>
           <li class="layui-nav-item">
-            <a href="">
+            <a href="javascript:;" id="logout-btn">
               &nbsp;
               <i class="layui-icon layui-icon-logout"></i>
               退了
