进度条加载控制

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>layout 后台大布局 - Layui</title>
     <link rel="stylesheet" href="./asset/lib/layui/css/layui.css" />
     <link rel="stylesheet" href="./asset/fonts/iconfont.css" />
+    <link rel="stylesheet" href="./asset/lib/nprogress/nprogress.css" />
     <link rel="stylesheet" href="./asset/css/index.css" />
     <script>
       //判断用户是否已经登录
@@ -128,8 +129,9 @@
       </div>
     </div>
     <script src="./asset/lib/jquery.js"></script>
-    <script src="./asset/js/common.js"></script>
+    <script src="./asset/lib/nprogress/nprogress.js"></script>
     <script src="./asset/lib/layui/layui.all.js"></script>
+    <script src="./asset/js/common.js"></script>
     <script src="./asset/js/index.js"></script>
   </body>
 </html>
