--- a/login.html
+++ b/login.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0,user-scalable=no" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="stylesheet" href="./asset/lib/layui/css/layui.css" />
+    <link rel="stylesheet" href="./asset/lib/nprogress/nprogress.css" />
     <link rel="stylesheet" href="./asset/css/login.css" />
     <title>登录</title>
   </head>
@@ -105,8 +106,9 @@
       </form>
     </div>
     <script src="./asset/lib/jquery.js"></script>
-    <script src="./asset/js/common.js"></script>
+    <script src="./asset/lib/nprogress/nprogress.js"></script>
     <script src="./asset/lib/layui/layui.all.js"></script>
+    <script src="./asset/js/common.js"></script>
     <script src="./asset/js/login.js"></script>
   </body>
 </html>
