个人中心-基本信息页面布局-1

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
               </a>
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="javascript:;">
+                  <a target="iframeArea" href="./my/base-info.html">
                     <i class="layui-icon layui-icon-app"></i>
                     基本资料
                   </a>
@@ -120,7 +120,7 @@
       <!-- 右侧 -->
       <div class="layui-body">
         <!-- 内容主体区域 -->
-        <iframe src="./home/dashboard.html"></iframe>
+        <iframe src="./home/dashboard.html" name="iframeArea"></iframe>
       </div>
       <!-- 底部 -->
       <div class="layui-footer">
