--- a/my/base-info.html
+++ b/my/base-info.html
@@ -9,7 +9,66 @@
     <link rel="stylesheet" href="../asset/lib/nprogress/nprogress.css" />
   </head>
   <body>
-    geren
+    <div class="layui-card">
+      <div class="layui-card-header">修改用户信息</div>
+      <div class="layui-card-body">
+        <!-- 表单区域 -->
+        <form class="layui-form" action="">
+          <!-- 用户名称 -->
+          <div class="layui-form-item">
+            <label class="layui-form-label">用户名称</label>
+            <div class="layui-input-block">
+              <input
+                type="text"
+                name="username"
+                required
+                lay-verify="required"
+                placeholder="请输入用户名称"
+                autocomplete="off"
+                class="layui-input"
+              />
+            </div>
+          </div>
+          <!-- 用户昵称 -->
+          <div class="layui-form-item">
+            <label class="layui-form-label">用户昵称</label>
+            <div class="layui-input-block">
+              <input
+                type="text"
+                name="nickname"
+                required
+                lay-verify="required"
+                placeholder="请输入用户昵称"
+                autocomplete="off"
+                class="layui-input"
+              />
+            </div>
+          </div>
+          <!-- 用户邮箱 -->
+          <div class="layui-form-item">
+            <label class="layui-form-label">用户邮箱</label>
+            <div class="layui-input-block">
+              <input
+                type="text"
+                name="email"
+                required
+                lay-verify="required"
+                placeholder="请输入用户邮箱"
+                autocomplete="off"
+                class="layui-input"
+              />
+            </div>
+          </div>
+          <!-- 重置和提交按钮 -->
+          <div class="layui-form-item">
+            <div class="layui-input-block">
+              <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
+              <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
     <script src="../asset/lib/jquery.js"></script>
     <script src="../asset/lib/nprogress/nprogress.js"></script>
     <script src="../asset/lib/layui/layui.all.js"></script>
