--- a/my/base-info.html
+++ b/my/base-info.html
@@ -13,7 +13,7 @@
       <div class="layui-card-header">修改用户信息</div>
       <div class="layui-card-body">
         <!-- 表单区域 -->
-        <form class="layui-form" action="">
+        <form class="layui-form" action=" " lay-filter="basicForm">
           <!-- 用户名称 -->
           <div class="layui-form-item">
             <label class="layui-form-label">用户名称</label>
