个人中心修改密码布局

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                   </a>
                 </dd>
                 <dd>
-                  <a href="javascript:;">
+                  <a target="iframeArea" href="./my/base-repwd.html">
                     <i class="layui-icon layui-icon-app"></i>
                     修改密码
                   </a>
