--- a/my/base-repwd.html
+++ b/my/base-repwd.html
@@ -10,23 +10,20 @@
   </head>
   <body>
     <div class="layui-card">
-      <div class="layui-card-header">修改用户信息</div>
+      <div class="layui-card-header">修改密码</div>
       <div class="layui-card-body">
         <!-- 表单区域 -->
         <form class="layui-form" action=" " lay-filter="basicForm">
           <!-- 用户名称 -->
-          <!-- 隐藏域:hidden类型的表单不显示,表单提交时会携带该数据-->
-          <input type="hidden" name="id" />
           <div class="layui-form-item">
-            <label class="layui-form-label">用户名称</label>
+            <label class="layui-form-label">原密码</label>
             <div class="layui-input-block">
               <input
-                type="text"
-                name="username"
-                readonly
+                type="password"
+                name="oldPwd"
                 required
                 lay-verify="required"
-                placeholder="请输入用户名称"
+                placeholder="请输入原密码"
                 autocomplete="off"
                 class="layui-input"
               />
@@ -34,14 +31,14 @@
           </div>
           <!-- 用户昵称 -->
           <div class="layui-form-item">
-            <label class="layui-form-label">用户昵称</label>
+            <label class="layui-form-label">新密码</label>
             <div class="layui-input-block">
               <input
-                type="text"
-                name="nickname"
+                type="password"
+                name="newPwd"
                 required
                 lay-verify="required"
-                placeholder="请输入用户昵称"
+                placeholder="请输入新密码"
                 autocomplete="off"
                 class="layui-input"
               />
@@ -49,14 +46,14 @@
           </div>
           <!-- 用户邮箱 -->
           <div class="layui-form-item">
-            <label class="layui-form-label">用户邮箱</label>
+            <label class="layui-form-label">确认新密码</label>
             <div class="layui-input-block">
               <input
-                type="text"
-                name="email"
+                type="password"
+                name="rePwd"
                 required
-                lay-verify="required|email"
-                placeholder="请输入用户邮箱"
+                lay-verify="required"
+                placeholder="请确认新密码"
                 autocomplete="off"
                 class="layui-input"
               />
@@ -65,7 +62,7 @@
           <!-- 重置和提交按钮 -->
           <div class="layui-form-item">
             <div class="layui-input-block">
-              <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
+              <button class="layui-btn" lay-submit lay-filter="formDemo">修改密码</button>
               <button type="button" class="layui-btn layui-btn-primary" id="resetFotm">重置</button>
             </div>
           </div>
@@ -76,6 +73,6 @@
     <script src="../asset/lib/nprogress/nprogress.js"></script>
     <script src="../asset/lib/layui/layui.all.js"></script>
     <script src="../asset/js/common.js"></script>
-    <script src="../asset/js/my/base-info.js"></script>
+    <script src="../asset/js/my/base-repwd.js"></script>
   </body>
 </html>
