--- a/my/base-repwd.html
+++ b/my/base-repwd.html
@@ -37,7 +37,7 @@
                 type="password"
                 name="newPwd"
                 required
-                lay-verify="required"
+                lay-verify="required|newPwd|diff"
                 placeholder="请输入新密码"
                 autocomplete="off"
                 class="layui-input"
@@ -51,7 +51,7 @@
               <input
                 type="password"
                 required
-                lay-verify="required"
+                lay-verify="required|same"
                 placeholder="请确认新密码"
                 autocomplete="off"
                 class="layui-input"
