个人中心-更换头像页面结构

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                   </a>
                 </dd>
                 <dd>
-                  <a href="javascript:;">
+                  <a target="iframeArea" href="./my/replace-avatar.html">
                     <i class="layui-icon layui-icon-app"></i>
                     更换头像
                   </a>
