--- a/my/replace-avatar.html
+++ b/my/replace-avatar.html
@@ -7,13 +7,45 @@
     <title>Document</title>
     <link rel="stylesheet" href="../asset/lib/layui/css/layui.css" />
     <link rel="stylesheet" href="../asset/lib/nprogress/nprogress.css" />
+    <link rel="stylesheet" href="./asset/lib/cropper/cropper.css" />
+    <link rel="stylesheet" href="../asset/css/replace-avatar.css" />
   </head>
   <body>
     <div class="layui-card">
       <div class="layui-card-header">更换头像</div>
-      <div class="layui-card-body"></div>
+      <div class="layui-card-body">
+        <!-- 第一行的图片裁剪和预览区域 -->
+        <div class="row1">
+          <!-- 图片裁剪区域 -->
+          <div class="cropper-box">
+            <!-- 这个 img 标签很重要，将来会把它初始化为裁剪区域 -->
+            <img id="image" src="../asset/images/sample.jpg" />
+          </div>
+          <!-- 图片的预览区域 -->
+          <div class="preview-box">
+            <div>
+              <!-- 宽高为 100px 的预览区域 -->
+              <div class="img-preview w100"></div>
+              <p class="size">100 x 100</p>
+            </div>
+            <div>
+              <!-- 宽高为 50px 的预览区域 -->
+              <div class="img-preview w50"></div>
+              <p class="size">50 x 50</p>
+            </div>
+          </div>
+        </div>
+
+        <!-- 第二行的按钮区域 -->
+        <div class="row2">
+          <button type="button" class="layui-btn">上传</button>
+          <button type="button" class="layui-btn layui-btn-danger">确定</button>
+        </div>
+      </div>
     </div>
     <script src="../asset/lib/jquery.js"></script>
+    <script src="./asset/lib/cropper/Cropper.js"></script>
+    <script src="./asset/lib/cropper/jquery-cropper.js"></script>
     <script src="../asset/lib/nprogress/nprogress.js"></script>
     <script src="../asset/lib/layui/layui.all.js"></script>
     <script src="../asset/js/common.js"></script>
