--- a/my/replace-avatar.html
+++ b/my/replace-avatar.html
@@ -7,7 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="../asset/lib/layui/css/layui.css" />
     <link rel="stylesheet" href="../asset/lib/nprogress/nprogress.css" />
-    <link rel="stylesheet" href="./asset/lib/cropper/cropper.css" />
+    <link rel="stylesheet" href="../asset/lib/cropper/cropper.css" />
     <link rel="stylesheet" href="../asset/css/replace-avatar.css" />
   </head>
   <body>
@@ -44,8 +44,8 @@
       </div>
     </div>
     <script src="../asset/lib/jquery.js"></script>
-    <script src="./asset/lib/cropper/Cropper.js"></script>
-    <script src="./asset/lib/cropper/jquery-cropper.js"></script>
+    <script src="../asset/lib/cropper/Cropper.js"></script>
+    <script src="../asset/lib/cropper/jquery-cropper.js"></script>
     <script src="../asset/lib/nprogress/nprogress.js"></script>
     <script src="../asset/lib/layui/layui.all.js"></script>
     <script src="../asset/js/common.js"></script>
