--- a/my/replace-avatar.html
+++ b/my/replace-avatar.html
@@ -40,7 +40,7 @@
         <div class="row2">
           <input type="file" name="avatar" id="avatar" style="display: none;" />
           <button id="upload" type="button" class="layui-btn">上传</button>
-          <button type="button" class="layui-btn layui-btn-danger">确定</button>
+          <button id="submitImg" type="button" class="layui-btn layui-btn-danger">确定</button>
         </div>
       </div>
     </div>
