弹出层基本用法

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               </a>
               <dl class="layui-nav-child">
                 <dd>
-                  <a href="javascript:;">
+                  <a target="iframeArea" href="./article/category.html">
                     <i class="layui-icon layui-icon-app"></i>
                     文章类别
                   </a>
