--- a/article/category.html
+++ b/article/category.html
@@ -4,15 +4,66 @@
     <meta charset="UTF-8" />
     <title>文章分类</title>
     <link rel="stylesheet" type="text/css" href="../asset/lib/layui/css/layui.css" />
+    <link rel="stylesheet" type="text/css" href="../asset/css/catergory.css" />
+    <script type="text/html" id="tpl-article">
+      {{each data}}
+      <tr>
+        <td>{{$value.name}}</td>
+        <td>{{$value.alias}}</td>
+        <td>
+          <button type="button" class="layui-btn layui-btn-xs">编辑</button>
+          <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+        </td>
+      </tr>
+      {{/each}}
+    </script>
   </head>
   <body>
     <div class="layui-card">
-      <div class="layui-card-header">文章类别管理</div>
-      <div class="layui-card-body"></div>
+      <div class="layui-card-header">
+        <span>文章分类管理</span>
+        <button id="add-category" type="button" class="layui-btn layui-btn-normal layui-btn-sm">添加分类</button>
+      </div>
+      <div class="layui-card-body">
+        <!-- 表格 -->
+        <table class="layui-table">
+          <colgroup>
+            <col width="40%" />
+            <col width="40%" />
+            <col width="20%" />
+          </colgroup>
+          <thead>
+            <tr>
+              <th>分类名称</th>
+              <th>分类别名</th>
+              <th>操作</th>
+            </tr>
+          </thead>
+          <tbody>
+            <!-- <tr>
+              <td>贤心</td>
+              <td>heart</td>
+              <td>
+                <button type="button" class="layui-btn layui-btn-xs">编辑</button>
+                <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+              </td>
+            </tr>
+            <tr>
+              <td>许闲心</td>
+              <td>xuheart</td>
+              <td>
+                <button type="button" class="layui-btn layui-btn-xs">编辑</button>
+                <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+              </td>
+            </tr> -->
+          </tbody>
+        </table>
+      </div>
     </div>
     <script type="text/javascript" src="../asset/lib/jquery.js"></script>
     <script type="text/javascript" src="../asset/js/common.js"></script>
     <script type="text/javascript" src="../asset/lib/layui/layui.all.js"></script>
+    <script src="../asset/lib/template-web.js"></script>
     <script type="text/javascript" src="../asset/js/article/category.js"></script>
   </body>
 </html>
