--- a/article/category.html
+++ b/article/category.html
@@ -37,7 +37,7 @@
         <td>{{$value.alias}}</td>
         <td>
           <button type="button" class="layui-btn layui-btn-xs">编辑</button>
-          <button type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
+          <button data-id='{{$value.Id}}' type="button" class="layui-btn layui-btn-danger layui-btn-xs">删除</button>
         </td>
       </tr>
       {{/each}}
